@@ -4,6 +4,8 @@
 	        - update validation_kproto
 
 
+clustMixType_0.3-9  2022-12-12  - fixes in kproto_gower (ln 224ff & 324ff) - merging of equal prototypes
+                                - test number for validation_kproto reduced to decrease time for check on CRAN 
 clustMixType_0.3-8  2022-12-10  - examples from validation_kproto changed to \dontrun{} as they are too slow for CRAN submission 
 clustMixType_0.3-7  2022-12-09  - fixes according to win-builder: importFrom("stats", "median"), .Rd for na.rm and plot.kproto 
                                 - NA treatment for kproto_gower (ln. 424): cluster membership NA if all varianbles are NA. Note kproto_gower does not allow for na.rm = "yes" data with removed missings are passed from kproto(). 
